Bug 473515 - Crash when activating Multibrush tool
Summary: Crash when activating Multibrush tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.2.0-beta2
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-08-18 21:21 UTC by Juan
Modified: 2023-09-07 02:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juan 2023-08-18 21:21:26 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Select Multibrush tool
2. 
3. 

OBSERVED RESULT
Program crash without warning popups


EXPECTED RESULT
Proper Multibrush tool use.

SOFTWARE/OS VERSIONS
Windows: 11


ADDITIONAL INFORMATION
Tried on a work in progress, on a smalller file and on a fresh file, with the same result

Faulting application name: krita.exe, version: 5.2.0.51, time stamp: 0x64dca469
Faulting module name: libKF5ConfigCore.dll, version: 0.0.0.0, time stamp: 0x64da470b
Exception code: 0xc0000005
Fault offset: 0x0000000000011706
Faulting process id: 0xcac
Faulting application start time: 0x01d9d218f83118a6
Faulting application path: C:\kritabeta\Krita (x64)\bin\krita.exe
Faulting module path: C:\kritabeta\Krita (x64)\bin\libKF5ConfigCore.dll
Report Id: 15881f09-b5af-4794-baf2-0afae94e4cf6
Faulting package full name: 
Faulting package-relative application ID:
Comment 1 Freya Lupen 2023-08-19 21:48:01 UTC
Confirming as a regression caused by commit cabfac1d (https://invent.kde.org/graphics/krita/-/commit/cabfac1d4ad9a4c5f43b49f8ee4c9cf849abc959).
Comment 2 Bug Janitor Service 2023-08-20 12:48:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1910
Comment 3 Dmitry Kazakov 2023-08-21 08:31:53 UTC
Git commit 6c5ea78b398b1387405103f9fc5ab191d18e19c0 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 21/08/2023 at 09:09.
Pushed by dkazakov into branch 'master'.

Initialize tool configGroup before optionWidget

Otherwise KisToolMultihand::createOptionWidget will crash.

M  +1    -2    plugins/tools/basictools/kis_tool_brush.cc

https://invent.kde.org/graphics/krita/-/commit/6c5ea78b398b1387405103f9fc5ab191d18e19c0
Comment 4 Emmet O'Neill 2023-09-07 02:24:49 UTC
Git commit 5caec25b4bdcd5f92a2b74c19f2c5d8ce2abcbe3 by Emmet O'Neill, on behalf of Freya Lupen.
Committed on 07/09/2023 at 04:24.
Pushed by emmetoneill into branch 'krita/5.2'.

Initialize tool configGroup before optionWidget

Otherwise KisToolMultihand::createOptionWidget will crash.


(cherry picked from commit 6c5ea78b398b1387405103f9fc5ab191d18e19c0)

M  +1    -2    plugins/tools/basictools/kis_tool_brush.cc

https://invent.kde.org/graphics/krita/-/commit/5caec25b4bdcd5f92a2b74c19f2c5d8ce2abcbe3