Initialize tool configGroup before optionWidget

Otherwise KisToolMultihand::createOptionWidget will crash.

BUG:473515


(cherry picked from commit 6c5ea78b398b1387405103f9fc5ab191d18e19c0)