plugins/tools/basictools/kis_tool_brush.cc
@@ -75,11 +75,10 @@ void KisToolBrush::activate(const QSet<KoShape*> &shapes)
     KisToolFreehand::activate(shapes);
     connect(&m_signalMapper, SIGNAL(mapped(int)), SLOT(slotSetSmoothingType(int)), Qt::UniqueConnection);
 
+    m_configGroup = KSharedConfig::openConfig()->group(toolId());
     optionWidgets(); // Ensure m_chkAssistant is initialized.
     QAction *toggleaction = action("toggle_assistant");
     connect(toggleaction, SIGNAL(triggered(bool)), m_chkAssistant, SLOT(toggle()), Qt::UniqueConnection);
-
-    m_configGroup =  KSharedConfig::openConfig()->group(toolId());
 }
 
 void KisToolBrush::deactivate()
